--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,16 @@
     "require": {
         "php": "^8.2",
         "bavix/laravel-wallet": "^11.0",
-        "laravel/framework": "^11.7",
+        "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
-        "laravel/pint": "^1.15",
+        "laravel/pint": "^1.16",
         "laravel/sail": "^1.29",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
-        "phpunit/phpunit": "^11.1",
-        "spatie/laravel-ignition": "^2.7"
+        "phpunit/phpunit": "^11.1"
     },
     "autoload": {
         "psr-4": {
